--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header">
-        <a href="./index.html" class="logo-head"><span class="logo-first-word">Web</span>Studio</a>
+        <a href="./index.html" class="logo-header"><span class="logo-first-word">Web</span>Studio</a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+                <li class="nav-item"><a href="./index.html" class="current">Студия</a></li>
                 <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
             </ul>
