--- a/portfolio.html
+++ b/portfolio.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header">
-        <a href="./index.html" class="logo-head"><span class="logo-first-word">Web</span>Studio</a>
+        <a href="./index.html" class="logo-header"><span class="logo-first-word">Web</span>Studio</a>
         <nav>
             <ul class="nav-list">
                 <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
-                <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                <li class="nav-item"><a href="./portfolio.html" class="current">Портфолио</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
             </ul>
         </nav>
@@ -28,20 +28,15 @@
         </ul>
     </header>
     <main>
-        <section class="portfolio-filter">
-            <h2 class="portfolio-filter-title">Фильтр портфолио</h2>
-            <nav>
-                <ul class="portfolio-filter-list">
-                    <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Все</button></li>
-                    <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Веб-сайты</button></li>
-                    <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Приложения</button></li>
-                    <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Дизайн</button></li>
-                    <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Маркетинг</button></li>
-                </ul>
-            </nav>
-        </section>
         <section class="examples-section">
             <h1 class="examples-section-title">Все примеры работ</h1>
+            <ul class="portfolio-filter-list">
+                <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Все</button></li>
+                <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Веб-сайты</button></li>
+                <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Приложения</button></li>
+                <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Дизайн</button></li>
+                <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Маркетинг</button></li>
+            </ul>
             <ul class="examples-section-list">
                 <li class="examples-section-items">
                     <img src="./images/company-1.jpg" alt="Веб-сайт" width="370" height="294" class="company-photo">
@@ -50,42 +45,42 @@
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-2.jpg" alt="Дизайн" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Постер New Orlean vs Golden Star</h2>
+                    <h2 class="company-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                     <p class="company-description">Дизайн</p>
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-3.jpg" alt="Приложение" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Ресторан Seafood</h2>
+                    <h2 class="company-name">Ресторан <span lang="en">Seafood</span></h2>
                     <p class="company-description">Приложение</p>
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-4.jpg" alt="Маркетинг" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Проект Prime</h2>
+                    <h2 class="company-name">Проект <span lang="en">Prime</span></h2>
                     <p class="company-description">Маркетинг</p>
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-5.jpg" alt="Приложение" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Проект Boxes</h2>
+                    <h2 class="company-name">Проект <span lang="en">Boxes</span></h2>
                     <p class="company-description">Приложение</p>
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-6.jpg" alt="Веб-сайт" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Inspiration has no Borders</h2>
+                    <h2 class="company-name" lang="en">Inspiration has no Borders</h2>
                     <p class="company-description">Веб-сайт</p>
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-7.jpg" alt="Дизайн" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Издание Limited Edition</h2>
+                    <h2 class="company-name">Издание <span lang="en">Limited Edition</span></h2>
                     <p class="company-description">Дизайн</p>
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-8.jpg" alt="Маркетинг" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Проект LAB</h2>
+                    <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
                     <p class="company-description">Маркетинг</p>
                 </li>
                 <li class="examples-section-items">
                     <img src="./images/company-9.jpg" alt="Приложение" width="370" height="294" class="company-photo">
-                    <h2 class="company-name">Growing Business</h2>
+                    <h2 class="company-name" lang="en">Growing Business</h2>
                     <p class="company-description">Приложение</p>
                 </li>
             </ul>
