font-weight in footer contacts

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
         <section class="examples-section">
             <h1 class="examples-section-title">Все примеры работ</h1>
             <ul class="portfolio-filter-list">
-                <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Все</button></li>
+                <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button current-btn">Все</button></li>
                 <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Веб-сайты</button></li>
                 <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Приложения</button></li>
                 <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-button">Дизайн</button></li>
