--- a/index.html
+++ b/index.html
@@ -1,101 +1,109 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студия</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <header class="header">
-        <a href="./index.html" class="logo-header"><span class="logo-first-word">Web</span>Studio</a>
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-item"><a href="./index.html" class="current">Студия</a></li>
-                <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul class="contacts-list">
-            <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
-            <li class="contacts-item"><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Studio</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="/">Studio</a></li>
+          <li><a href="/portfolio">Portfolio</a></li>
+          <li><a href="/contacts">Contacts</a></li>
         </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
-        <section class="hero">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-btn">Заказать услугу</button>
-        </section>
-        <section class="benefits-section">
-            <h2 class="benefits-title">Наши преимущества</h2>
-            <ul class="benefits-list">
-                <li class="benefits-item">
-                    <h3 class="benefits-item-title">Внимание к деталям</h3>
-                    <p class="benefits-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="benefits-item">
-                    <h3 class="benefits-item-title">Пунктуальность</h3>
-                    <p class="benefits-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="benefits-item">
-                    <h3 class="benefits-item-title">Планирование</h3>
-                    <p class="benefits-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="benefits-item">
-                    <h3 class="benefits-item-title">Современные технологии</h3>
-                    <p class="benefits-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <section class="employment-section">
-            <h2 class="employment-title">Чем мы занимаемся</h2>
-            <ul class="employment-list">
-                <li class="employment-item"><img src="./images/example-1.jpg" alt="Разработка програмного обеспечения" width="370" height="294"></li>
-                <li class="employment-item"><img src="./images/example-2.jpg" alt="Веб-дизайн" width="370" height="294"></li>
-                <li class="employment-item"><img src="./images/example-3.jpg" alt="Подбор цветовой гаммы" width="370" height="294"></li>
-            </ul>
-        </section>
-        <section class="team-section">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list">
-                <li class="team-item">
-                    <img src="./images/member-1.jpg" alt="Product Designer" width="270" height="260" class="team-item-photo">
-                    <h3 class="team-item-title">Игорь Демьяненко</h3>
-                    <p lang="en" class="team-item-text">Product Designer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/member-2.jpg" alt="Frontend Developer" width="270" height="260" class="team-item-photo">
-                    <h3 class="team-item-title">Ольга Репина</h3>
-                    <p lang="en" class="team-item-text">Frontend Developer</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/member-3.jpg" alt="Marketing" width="270" height="260" class="team-item-photo">
-                    <h3 class="team-item-title">Николай Тарасов</h3>
-                    <p lang="en" class="team-item-text">Marketing</p>
-                </li>
-                <li class="team-item">
-                    <img src="./images/member-4.jpg" alt="UI Designer" width="270" height="260" class="team-item-photo">
-                    <h3 class="team-item-title">Михаил Ермаков</h3>
-                    <p lang="en" class="team-item-text">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2>Our advantages</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital growth opportunities
+              and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li><img src="./images/about1.jpg" alt="Website" width="360" /></li>
+          <li>
+            <img src="./images/about2.jpg" alt="Mobile application" width="360" />
+          </li>
+          <li>
+            <img src="./images/about3.jpg" alt="Responsive design" width="360" />
+          </li>
+        </ul>
+      </section> -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/team1.jpg" alt="Mark Guerrero" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/team2.jpg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team3.jpg" alt="Camila Garcia" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team4.jpg" alt="Daniel Wilson" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer class="footer">
-        <a href="./index.html" class="logo-footer"><span class="logo-first-word">Web</span>Studio</a>
-        <address>
-            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="contacts-list">
-                <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link-footer">info@devstudio.com</a></li>
-                <li class="contacts-item"><a href="tel:+380961111111" class="contacts-link-footer">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital marketing &#38;
+        growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
