--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header class="header">
       <div class="wrapper">
         <nav class="header-nav">
-          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+          <a href="./" class="logo"><span>Web</span>Studio</a>
           <ul class="header-list">
             <li><a class="header-nav-link" href="/">Studio</a></li>
-            <li><a class="header-nav-link" href="/portfolio.html">Portfolio</a></li>
-            <li><a class="header-nav-link" href="/contacts.html">Contacts</a></li>
+            <li><a class="header-nav-link" href="/portfolio">Portfolio</a></li>
+            <li><a class="header-nav-link" href="/contacts">Contacts</a></li>
           </ul>
         </nav>
         <address>
@@ -132,7 +132,7 @@
     <footer class="footer">
       <div class="wrapper">
         <div class="footer-description">
-          <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+          <a class="logo" href="./"><span>Web</span>Studio</a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing &#38;
             growth solutions.
