--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="wrapper">
         <nav class="header-nav">
-          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+          <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <ul class="header-list">
             <li><a class="header-nav-link" href="./">Studio</a></li>
             <li><a class="header-nav-link" href="./portfolio.html">Portfolio</a></li>
@@ -137,7 +137,7 @@
     <footer class="footer">
       <div class="wrapper">
         <div class="footer-description">
-          <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+          <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing &#38;
             growth solutions.
