--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="wrapper">
         <nav class="header-nav">
-          <a href="./index.html" class="logo">Web<span>Studio</span></a>
+          <a href="./index.html" class="logo">Web<span class="logo-accent">Studio</span></a>
           <ul class="header-list">
             <li><a class="header-nav-link" href="./">Studio</a></li>
             <li><a class="header-nav-link" href="./portfolio.html">Portfolio</a></li>
