--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <nav class="header-nav">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <ul class="header-list">
-            <li><a class="header-nav-link" href="./">Studio</a></li>
+            <li><a class="header-nav-link" href="./index.html">Studio</a></li>
             <li><a class="header-nav-link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="header-nav-link" href="./contacts.html">Contacts</a></li>
           </ul>
