Changed design ver

--- a/index.html
+++ b/index.html
@@ -45,88 +45,163 @@
         </div>
       </section>
       <section class="advantages">
-        <div class="wrapper">
-          <h2 class="hidden">Our advantages</h2>
-          <ul class="list">
-            <li>
-              <h3 class="card-title">Strategy</h3>
-              <p class="advantages-list-text">
-                Our goal is to identify the business problem to walk away with the perfect and
-                creative solution.
-              </p>
-            </li>
-            <li>
-              <h3 class="card-title">Punctuality</h3>
-              <p class="advantages-list-text">
-                Bring the key message to the brand's audience for the best price within the shortest
-                possible time.
-              </p>
-            </li>
-            <li>
-              <h3 class="card-title">Diligence</h3>
-              <p class="advantages-list-text">
-                Research and confirm brands that present the strongest digital growth opportunities
-                and minimize risk.
-              </p>
-            </li>
-            <li>
-              <h3 class="card-title">Technologies</h3>
-              <p class="advantages-list-text">
-                Design practice focused on digital experiences. We bring forth a deep passion for
-                problem-solving.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="services">
-        <div class="wrapper">
-          <h2 class="section-title">What are we doing</h2>
-          <ul class="list">
-            <li><img src="./images/about1.jpg" alt="Website" width="360" /></li>
-            <li>
-              <img src="./images/about2.jpg" alt="Mobile application" width="360" />
-            </li>
-            <li>
-              <img src="./images/about3.jpg" alt="Responsive design" width="360" />
-            </li>
-          </ul>
-        </div>
+        <h2 class="hidden">Our advantages</h2>
+        <ul class="list">
+          <li>
+            <h3 class="card-title">Strategy</h3>
+            <p class="advantages-list-text">
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="card-title">Punctuality</h3>
+            <p class="advantages-list-text">
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
+            </p>
+          </li>
+          <li>
+            <h3 class="card-title">Diligence</h3>
+            <p class="advantages-list-text">
+              Research and confirm brands that present the strongest digital growth opportunities
+              and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="card-title">Technologies</h3>
+            <p class="advantages-list-text">
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <section class="team">
-        <div class="wrapper">
-          <h2 class="section-title">Our Team</h2>
-          <ul class="list">
-            <li class="card">
-              <img src="./images/team1.jpg" alt="Mark Guerrero" width="264" />
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li class="card">
+            <img src="./images/team1.jpg" alt="Mark Guerrero" width="264" />
+            <div class="card-description">
+              <h3 class="card-title">Mark Guerrero</h3>
+              <p>Product Designer</p>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/team2.jpg" alt="Tom Ford" width="264" />
+            <div class="card-description">
+              <h3 class="card-title">Tom Ford</h3>
+              <p>Frontend Developer</p>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/team3.jpg" alt="Camila Garcia" width="264" />
+            <div class="card-description">
+              <h3 class="card-title">Camila Garcia</h3>
+              <p>Marketing</p>
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/team4.jpg" alt="Daniel Wilson" width="264" />
+            <div class="card-description">
+              <h3 class="card-title">Daniel Wilson</h3>
+              <p>UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="portfolio">
+        <h1 class="hidden">Portfolio</h1>
+        <ul class="list filter">
+          <li><button class="filter-button" type="button">All</button></li>
+          <li><button class="filter-button" type="button">Web Site</button></li>
+          <li><button class="filter-button" type="button">App</button></li>
+          <li><button class="filter-button" type="button">Design</button></li>
+          <li><button class="filter-button" type="button">Marketing</button></li>
+        </ul>
+        <ul class="list">
+          <li class="card">
+            <a href="">
+              <img src="./images/ref1.jpg" alt="Banking App Interface Concept" width="360" />
               <div class="card-description">
-                <h3 class="card-title">Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h2 class="card-title">Banking App Interface Concept</h2>
+                <p class="card-text">App</p>
               </div>
-            </li>
-            <li class="card">
-              <img src="./images/team2.jpg" alt="Tom Ford" width="264" />
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref2.jpg" alt="Cashless Payment" width="360" />
               <div class="card-description">
-                <h3 class="card-title">Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h2 class="card-title">Cashless Payment</h2>
+                <p class="card-text">Marketing</p>
               </div>
-            </li>
-            <li class="card">
-              <img src="./images/team3.jpg" alt="Camila Garcia" width="264" />
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref3.jpg" alt="Meditation App" width="360" />
               <div class="card-description">
-                <h3 class="card-title">Camila Garcia</h3>
-                <p>Marketing</p>
+                <h2 class="card-title">Meditation App</h2>
+                <p class="card-text">App</p>
               </div>
-            </li>
-            <li class="card">
-              <img src="./images/team4.jpg" alt="Daniel Wilson" width="264" />
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref4.jpg" alt="Taxi Service" width="360" />
               <div class="card-description">
-                <h3 class="card-title">Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h2 class="card-title">Taxi Service</h2>
+                <p class="card-text">Marketing</p>
               </div>
-            </li>
-          </ul>
-        </div>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref5.jpg" alt="Screen Illustrations" width="360" />
+              <div class="card-description">
+                <h2 class="card-title">Screen Illustrations</h2>
+                <p class="card-text">Design</p>
+              </div>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref6.jpg" alt="Online Courses" width="360" />
+              <div class="card-description">
+                <h2 class="card-title">Online Courses</h2>
+                <p class="card-text">Marketing</p>
+              </div>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref7.jpg" alt="Instagram Stories Concept" width="360" />
+              <div class="card-description">
+                <h2 class="card-title">Instagram Stories Concept</h2>
+                <p class="card-text">Design</p>
+              </div>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref8.jpg" alt="Organic Food" width="360" />
+              <div class="card-description">
+                <h2 class="card-title">Organic Food</h2>
+                <p class="card-text">Web Site</p>
+              </div>
+            </a>
+          </li>
+          <li class="card">
+            <a href="">
+              <img src="./images/ref9.jpg" alt="Fresh Coffee" width="360" />
+              <div class="card-description">
+                <h2 class="card-title">Fresh Coffee</h2>
+                <p class="card-text">Web Site</p>
+              </div>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
