--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a href="./index.html" class="logo">Web<span class="logo-accent">Studio</span></a>
         <ul class="header-list">
           <li><a class="header-nav-link" href="./index.html">Studio</a></li>
-          <li><a class="header-nav-link" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="header-nav-link" href="./contacts.html">Contacts</a></li>
+          <li><a class="header-nav-link" href="">Portfolio</a></li>
+          <li><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
