--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a class="header-nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="header-address">
         <ul class="header-list">
           <li>
             <a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
