--- a/index.html
+++ b/index.html
@@ -78,136 +78,86 @@
         <ul class="list">
           <li class="card">
             <img src="./images/team1.jpg" alt="Mark Guerrero" width="264" />
-            <div class="card-description">
-              <h3 class="card-title">Mark Guerrero</h3>
-              <p>Product Designer</p>
-            </div>
+            <h3 class="card-title">Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li class="card">
             <img src="./images/team2.jpg" alt="Tom Ford" width="264" />
-            <div class="card-description">
-              <h3 class="card-title">Tom Ford</h3>
-              <p>Frontend Developer</p>
-            </div>
+            <h3 class="card-title">Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li class="card">
             <img src="./images/team3.jpg" alt="Camila Garcia" width="264" />
-            <div class="card-description">
-              <h3 class="card-title">Camila Garcia</h3>
-              <p>Marketing</p>
-            </div>
+            <h3 class="card-title">Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li class="card">
             <img src="./images/team4.jpg" alt="Daniel Wilson" width="264" />
-            <div class="card-description">
-              <h3 class="card-title">Daniel Wilson</h3>
-              <p>UI Designer</p>
-            </div>
+            <h3 class="card-title">Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
       <section class="portfolio">
         <h1 class="hidden">Portfolio</h1>
-        <ul class="list filter">
-          <li><button class="filter-button" type="button">All</button></li>
-          <li><button class="filter-button" type="button">Web Site</button></li>
-          <li><button class="filter-button" type="button">App</button></li>
-          <li><button class="filter-button" type="button">Design</button></li>
-          <li><button class="filter-button" type="button">Marketing</button></li>
-        </ul>
         <ul class="list">
           <li class="card">
             <a href="">
               <img src="./images/ref1.jpg" alt="Banking App Interface Concept" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Banking App Interface Concept</h2>
-                <p class="card-text">App</p>
-              </div>
+
+              <h2 class="card-title">Banking App</h2>
+              <p class="card-text">App</p>
             </a>
           </li>
           <li class="card">
             <a href="">
               <img src="./images/ref2.jpg" alt="Cashless Payment" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Cashless Payment</h2>
-                <p class="card-text">Marketing</p>
-              </div>
+
+              <h2 class="card-title">Cashless Payment</h2>
+              <p class="card-text">Marketing</p>
             </a>
           </li>
           <li class="card">
             <a href="">
               <img src="./images/ref3.jpg" alt="Meditation App" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Meditation App</h2>
-                <p class="card-text">App</p>
-              </div>
+
+              <h2 class="card-title">Meditation App</h2>
+              <p class="card-text">App</p>
             </a>
           </li>
           <li class="card">
             <a href="">
               <img src="./images/ref4.jpg" alt="Taxi Service" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Taxi Service</h2>
-                <p class="card-text">Marketing</p>
-              </div>
+
+              <h2 class="card-title">Taxi Service</h2>
+              <p class="card-text">Marketing</p>
             </a>
           </li>
           <li class="card">
             <a href="">
               <img src="./images/ref5.jpg" alt="Screen Illustrations" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Screen Illustrations</h2>
-                <p class="card-text">Design</p>
-              </div>
+
+              <h2 class="card-title">Screen Illustrations</h2>
+              <p class="card-text">Design</p>
             </a>
           </li>
           <li class="card">
             <a href="">
               <img src="./images/ref6.jpg" alt="Online Courses" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Online Courses</h2>
-                <p class="card-text">Marketing</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="">
-              <img src="./images/ref7.jpg" alt="Instagram Stories Concept" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Instagram Stories Concept</h2>
-                <p class="card-text">Design</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="">
-              <img src="./images/ref8.jpg" alt="Organic Food" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Organic Food</h2>
-                <p class="card-text">Web Site</p>
-              </div>
-            </a>
-          </li>
-          <li class="card">
-            <a href="">
-              <img src="./images/ref9.jpg" alt="Fresh Coffee" width="360" />
-              <div class="card-description">
-                <h2 class="card-title">Fresh Coffee</h2>
-                <p class="card-text">Web Site</p>
-              </div>
+
+              <h2 class="card-title">Online Courses</h2>
+              <p class="card-text">Marketing</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-description">
-        <a href="./index.html" class="logo">Web<span>Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing &#38;
-          growth solutions.
-        </p>
-      </div>
+      <a href="./index.html" class="logo">Web<span>Studio</span></a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital marketing &#38;
+        growth solutions.
+      </p>
     </footer>
   </body>
 </html>
