--- a/index.html
+++ b/index.html
@@ -79,32 +79,31 @@
           <li class="card">
             <img src="./images/team1.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="card-title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="card-text">Product Designer</p>
           </li>
           <li class="card">
             <img src="./images/team2.jpg" alt="Tom Ford" width="264" />
             <h3 class="card-title">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="card-text">Frontend Developer</p>
           </li>
           <li class="card">
             <img src="./images/team3.jpg" alt="Camila Garcia" width="264" />
             <h3 class="card-title">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="card-text">Marketing</p>
           </li>
           <li class="card">
             <img src="./images/team4.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="card-title">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="card-text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section class="portfolio">
-        <h1 class="hidden">Portfolio</h1>
+        <h1 class="section-title">Portfolio</h1>
         <ul class="list">
           <li class="card">
             <a href="">
               <img src="./images/ref1.jpg" alt="Banking App Interface Concept" width="360" />
-
               <h2 class="card-title">Banking App</h2>
               <p class="card-text">App</p>
             </a>
@@ -112,7 +111,6 @@
           <li class="card">
             <a href="">
               <img src="./images/ref2.jpg" alt="Cashless Payment" width="360" />
-
               <h2 class="card-title">Cashless Payment</h2>
               <p class="card-text">Marketing</p>
             </a>
@@ -120,7 +118,6 @@
           <li class="card">
             <a href="">
               <img src="./images/ref3.jpg" alt="Meditation App" width="360" />
-
               <h2 class="card-title">Meditation App</h2>
               <p class="card-text">App</p>
             </a>
@@ -128,7 +125,6 @@
           <li class="card">
             <a href="">
               <img src="./images/ref4.jpg" alt="Taxi Service" width="360" />
-
               <h2 class="card-title">Taxi Service</h2>
               <p class="card-text">Marketing</p>
             </a>
@@ -136,7 +132,6 @@
           <li class="card">
             <a href="">
               <img src="./images/ref5.jpg" alt="Screen Illustrations" width="360" />
-
               <h2 class="card-title">Screen Illustrations</h2>
               <p class="card-text">Design</p>
             </a>
@@ -144,7 +139,6 @@
           <li class="card">
             <a href="">
               <img src="./images/ref6.jpg" alt="Online Courses" width="360" />
-
               <h2 class="card-title">Online Courses</h2>
               <p class="card-text">Marketing</p>
             </a>
