--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span>Studio</span></a>
+      <a href="./index.html" class="logo">Web<span class="logo-accent">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing &#38;
         growth solutions.
